...
            android:background="#ffffff"
            android:src="@drawable/respon"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="340dp"/>

        <ImageButton
            android:id="@+id/button_profil"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="#ffffff"
            android:src="@drawable/profil"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="340dp"/>
...
