...
        android:background="#1029"
        android:ems="10"
        android:layout_marginTop="192dp" />

    <Button
        android:layout_marginTop="220dp"
        android:id="@+id/btnKeluar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="KELUAR" />
</RelativeLayout>

